[package]
name = "omnispindle"
version = "0.1.0"
edition = "2021"
authors = ["Dan Edens"]
description = "A high-performance MQTT-based message broker for the Madness_Interactive ecosystem"
license = "MIT"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
rumqttc = "0.24"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[lib]
name = "omnispindle"
crate-type = ["cdylib", "rlib"]

[features]
default = ["python"]
python = ["pyo3"]

[dependencies.pyo3]
version = "0.20"
features = ["extension-module"]
optional = true 